-- For further documentation,
-- see http://haskell.org/cabal/users-guide/

name:                mdr
version:             0.0.1.0
synopsis:            the MarkDown Runner
description:         simple Markup language. (Markdown preproccessor and runner)
license:             GPL-3
license-file:        LICENSE
author:              fennecdjay
maintainer:          astor.jeremie@wanadoo.fr
-- copyright:
category:            Text
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository this
  type:     git
  location: http://github.com/fennecdjay/mdr
  tag:      0.0.1.0

executable mdr
  main-is:             Main.hs
  other-modules:       MdrCode MdrLexr MdrPars MdrSnip MdrUtil MdrView
  other-extensions:    LambdaCase
  build-tools:         alex, happy
  build-depends:       base, process, array
  hs-source-dirs:      src
  default-language:    Haskell2010

Test-Suite test
  hs-source-dirs:      tests
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    test.hs
  build-depends: base >=4.1 && <4.13, process
